# rusquitto

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TESTING.md  clippy.toml  optimization.md  rusquitto.config.toml  rusquitto.default.toml  rusquitto.toml  rustfmt.toml  security.md
.agents/: README.md  architecture.md  dependencies.md  next-steps.md  overview.md  progress.md  scope.md
.cargo/: config.toml
.githooks/: install.sh  pre-commit
deploy/: rusquitto.service
docs/: ARCHITECTURE.md  MQTT_IMPLEMENTATION.md  MQTT_PACKETS.md
examples/: alloc_probe.rs  allocprobe.rs  park_probe.rs  wake_probe.rs
scripts/: mosquitto.sh
src/: auth.rs  broker.rs  config.rs  lib.rs  logger.rs  main.rs  persistence.rs  protocol.rs  server.rs  telemetry.rs
src/broker/: delivery.rs  engine.rs  mesh.rs  mod.rs  session.rs  shard.rs  topic_trie.rs  topics.rs
src/broker/shard/: mesh.rs  mod.rs  routing.rs  tests.rs
src/broker/topics/: interner.rs  mod.rs  trie.rs
src/net/: mod.rs  socket.rs  tcp_listener.rs
src/persistence/: codec.rs  mod.rs  retained.rs  session.rs  wal.rs
src/server/: connection.rs  mod.rs  overload.rs  shard.rs  worker.rs
src/server/connection/: ack.rs  connect.rs  control.rs  delivery.rs  mod.rs  publish.rs  ratelimit.rs  subscribe.rs  tests.rs
src/server/shard/: accept.rs  maintenance.rs  parking.rs  serve.rs
src/telemetry/: logging.rs  metrics.rs
src/transport/: mod.rs  tcp.rs  tls.rs  websocket.rs
stress/: .gitignore  README.md  attack.py  memprobe.py  mqttwire.py  netchaos.sh  run.sh  soak.py  stresser.rs
tests/: integration.rs
