[package]
name = "rusquitto"
version = "1.6.5"
edition = "2024"
default-run = "rusquitto"

[dependencies]
socket2 = { version = "0.6.2", features = ["all"] }
glommio = "0.9.0"
bytes = "1.11"
mqttbytes = "0.6"
futures-lite = "2.6"

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# CLI & configuration
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"

# Process signals (graceful shutdown on SIGTERM / SIGINT)
signal-hook = "0.4"

# `malloc_trim` on the maintenance tick: return freed arena pages to the kernel
# after connection bursts (already in the tree via glommio).
libc = "0.2"

# Password hashing for `[[auth.users]]` password_hash: legacy SHA-256 hex, plus
# Argon2id PHC strings (salted, memory-hard — the recommended form).
sha2 = "0.11"
argon2 = "0.5"

# WebSocket transport: RFC 6455 handshake (SHA-1 + base64 of Sec-WebSocket-Key)
sha1 = "0.11"
base64 = "0.22"

# TLS termination (rustls over glommio's futures-io streams). `ring` crypto
# provider (portable, no C toolchain beyond a compiler); `tls12` enables TLS 1.2
# alongside the always-present TLS 1.3. rustls implements no protocol below 1.2
# and ships only AEAD cipher suites, so weak protocols/ciphers are impossible.
futures-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pemfile = "2"

[dev-dependencies]
# Self-signed certificate generation for the TLS handshake tests.
rcgen = "0.14.8"
