[package]
name = "rusquitto"
version = "2.1.2"
edition = "2024"
default-run = "rusquitto"

[dependencies]
socket2 = { version = "0.6.2", features = ["all"] }
glommio = "0.9.0"
bytes = "1.12"
mqttbytes = "0.6"
futures-lite = "2.6"

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# CLI & configuration
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"

# Process signals (graceful shutdown on SIGTERM / SIGINT)
signal-hook = "0.4"

# `malloc_trim` on the maintenance tick: return freed arena pages to the kernel
# after connection bursts (already in the tree via glommio).
libc = "0.2"

# Password hashing for `[[auth.users]]` password_hash: legacy SHA-256 hex, plus
# Argon2id PHC strings (salted, memory-hard — the recommended form).
sha2 = "0.11"
argon2 = "0.5"

# Raw io_uring for the per-shard parked-connection readiness ring (`[parking]`):
# idle plain-TCP fds are held task-less on IORING_OP_POLL_ADD instead of paying a
# glommio task + read Source each (glommio does not expose its own POLL_ADD).
io-uring = "0.7"

# WebSocket transport: RFC 6455 handshake (SHA-1 + base64 of Sec-WebSocket-Key)
sha1 = "0.11"
base64 = "0.22"

# TLS termination (rustls over glommio's futures-io streams). `ring` crypto
# provider (portable, no C toolchain beyond a compiler); `tls12` enables TLS 1.2
# alongside the always-present TLS 1.3. rustls implements no protocol below 1.2
# and ships only AEAD cipher suites, so weak protocols/ciphers are impossible.
futures-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pemfile = "2"
# Parse the verified client certificate's subject to map its Common Name onto an
# MQTT identity for per-device ACLs (`[tls] cert_cn_as_username`). rustls verifies
# the chain but does not expose the parsed subject; this reads it. Already in the
# tree as a transitive dev-dependency of rcgen, so it adds little new weight.
x509-parser = "0.18"

[dev-dependencies]
# Self-signed certificate generation for the TLS handshake tests.
rcgen = "0.14"
# Property-based fuzzing of the MQTT frame parser and packet handlers: feeds
# adversarially-generated byte streams through the connection state machine and
# asserts it never panics (only returns a clean Ok/Err). Runs in `cargo test`, so
# the parser's malformed-input surface is continuously fuzzed in CI, not just
# checked against the hand-curated adversarial battery.
proptest = "1"

# The stress hammer lives under stress/ (dependency-free, also builds with a bare
# `rustc`), but is registered as an example so `cargo clippy`/`fmt`/CI cover it.
[[example]]
name = "stresser"
path = "stress/stresser.rs"
